message Basic {
  required double num = 1;
  required bytes payload = 2;
}

message UTF8 {
  required string foo = 1;
  required uint32 bar = 2;
}

message Nested {
  required double num = 1;
  required bytes payload = 2;
  required Basic meh = 3;
}

message Repeated {
  repeated Basic list = 1;
}

message Integers {
  optional sint32 sint32 = 1;
  optional sint64 sint64 = 2;
  optional int32 int32 = 3;
  optional uint32 uint32 = 4;
  optional int64 int64 = 5;
}

message Float {
  optional float float1 = 1;
  optional float float2 = 2;
  optional float float3 = 3;
}

message Packed {
  repeated Basic list = 1 [packed=true];
  repeated string packed = 2 [packed=true];
}

enum FOO {
  A = 1;
  B = 2;
}

message Defaults {
  optional int32 num = 1 [default = 42];
  optional FOO foo1 = 2 [default = B];
  optional FOO foo2 = 3;
  repeated FOO foos = 4;
  optional float float_value = 5 [default = 4.932];
  optional double double_value = 6 [default = 1.2322];
}

message Optional {
  optional sint32 sint32 = 1;
  optional sint64 sint64 = 2;
  optional int32 int32 = 3;
  optional uint32 uint32 = 4;
  optional int64 int64 = 5;
  optional float float = 6;
  optional double double = 7;
  optional string string = 8;
  optional bool bool = 9;

  optional int32 int32_default = 10 [default = 46];
  optional float float_default = 11 [default = 4.932];
  optional double double_default = 12 [default = 1.2322];
  optional string string_default = 13 [default = "foo"];
  optional bool bool_default = 14 [default = true];
}